fix: overflow small devices

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@
 
 html {
     max-width: 100vw;
-    min-width: 600px;
     overflow-x: hidden;
     text-rendering: optimizeLegibility;
     scroll-behavior: smooth;
@@ -417,7 +416,7 @@ body.active {
 
 .back-to-top span {
     color: var(--background-codeError);
-    font-size: 3vw;
+    font-size: 2rem;
     transition: 0.2s ease-out;
 }
 
@@ -481,5 +480,27 @@ body.active {
         top: 0;
         right: 0;
         margin: 20px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #navbar {
+        min-width: 12rem;
+    }
+
+    header, h1 {
+        font-size: 1rem;
+    }
+
+    p{
+        font-size: 0.8rem;
+    }
+
+    section pre code, .last {
+        font-size: 0.6rem;
+    }
+
+    .back-to-top {
+        margin-bottom: 20px;
     }
 }
